fix: save unstaged changes
